photogallery HISTORY


photogallery
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- fix inclusion of version number in gallery footer
- add 'exif2text.sh' to include EXIT tags in comments


photogallery v1.26 - 2008-07-13
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- create proper release tarball including all tools and short README


photogallery v1.25 - 2008-07-08
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 - begin the HISTORY file